; ModuleID = '/home/carl/AnghaBench/linux/drivers/vhost/extr_vhost.c_vhost_umem_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vhost/extr_vhost.c_vhost_umem_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vhost_umem = type { i32, i64, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@RB_ROOT_CACHED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.vhost_umem* ()* @vhost_umem_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.vhost_umem* @vhost_umem_alloc() #0 {
  %1 = alloca %struct.vhost_umem*, align 8
  %2 = alloca %struct.vhost_umem*, align 8
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.vhost_umem* @kvzalloc(i32 24, i32 %3)
  store %struct.vhost_umem* %4, %struct.vhost_umem** %2, align 8
  %5 = load %struct.vhost_umem*, %struct.vhost_umem** %2, align 8
  %6 = icmp ne %struct.vhost_umem* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store %struct.vhost_umem* null, %struct.vhost_umem** %1, align 8
  br label %18

8:                                                ; preds = %0
  %9 = load i32, i32* @RB_ROOT_CACHED, align 4
  %10 = load %struct.vhost_umem*, %struct.vhost_umem** %2, align 8
  %11 = getelementptr inbounds %struct.vhost_umem, %struct.vhost_umem* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 8
  %12 = load %struct.vhost_umem*, %struct.vhost_umem** %2, align 8
  %13 = getelementptr inbounds %struct.vhost_umem, %struct.vhost_umem* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.vhost_umem*, %struct.vhost_umem** %2, align 8
  %15 = getelementptr inbounds %struct.vhost_umem, %struct.vhost_umem* %14, i32 0, i32 0
  %16 = call i32 @INIT_LIST_HEAD(i32* %15)
  %17 = load %struct.vhost_umem*, %struct.vhost_umem** %2, align 8
  store %struct.vhost_umem* %17, %struct.vhost_umem** %1, align 8
  br label %18

18:                                               ; preds = %8, %7
  %19 = load %struct.vhost_umem*, %struct.vhost_umem** %1, align 8
  ret %struct.vhost_umem* %19
}

declare dso_local %struct.vhost_umem* @kvzalloc(i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
